--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+spring.datasource.hikari.maximum-pool-size=25
