--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,15 @@
 			<artifactId>HikariCP</artifactId>
 			<version>2.6.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-java8</artifactId>
+		</dependency>
+		<dependency>
+	        <groupId>com.fasterxml.jackson.datatype</groupId>
+	        <artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
