--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 spring.datasource.hikari.maximum-pool-size=25
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
