--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/olympics
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
-spring.datasource.hikari.maximum-pool-size=25
+spring.datasource.hikari.maximum-pool-size=10
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
